<resources>
    <string name="app_name">VibeSyncApp</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="loginbtn">Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="registerbtn">Register</string>
    <string name="client_id">820667898177-nrfh6kv1r5ott7k76gd3sdev90iir50r.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>